# cotainr

./: .readthedocs.yml  README.md  cotainr.eb  cotainr_template.eb  pyproject.toml
.github/workflows/: CD_testpypi.yml  CI_pull_request.yml  CI_push.yml  SCHED_docs_linkcheck.yml
cotainr/: cli.py  container.py  pack.py
doc/: conf.py
